--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Anseo</title>
   </head>
 
-  <body>
+  <body style="text-align: center; line-height: 6em;">
     <div id="container">
       <div class="inner">
 
@@ -26,7 +26,7 @@
         </section>
 
         <footer>
-          <p>From <a href="http://diaga.ie/">Diaga</a></p>
+          <p>by <a href="http://diaga.ie/">Diaga</a>.</p>
         </footer>
 
       </div>
